Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95940

tst_qquicktextinput is flaky on OpenSUSE

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.5.1, 6.6.0
    • 6.3
    • Quick: Other
    • None
    • Linux/X11
    • c6fdaa5ab (dev), 9ed18f8c6 (6.5)

      Especially paste-related tests fail frequently. Log Snippet:

      agent:2021/08/20 08:18:18 build.go:391: 179: PASS   : tst_qquicktextinput::cursorRectangle(right to left)
      agent:2021/08/20 08:18:18 build.go:391: 179: PASS   : tst_qquicktextinput::navigation()
      agent:2021/08/20 08:18:18 build.go:391: 179: PASS   : tst_qquicktextinput::navigation_RTL()
      agent:2021/08/20 08:18:19 build.go:391: 179: PASS   : tst_qquicktextinput::copyAndPaste()
      agent:2021/08/20 08:18:19 build.go:391: 179: QWARN  : tst_qquicktextinput::copyAndPasteKeySequence() QXcbClipboard: Cannot transfer data, no data available
      agent:2021/08/20 08:18:19 build.go:391: 179: QWARN  : tst_qquicktextinput::copyAndPasteKeySequence() QXcbClipboard: Cannot transfer data, no data available
      agent:2021/08/20 08:18:19 build.go:391: 179: QWARN  : tst_qquicktextinput::copyAndPasteKeySequence() QXcbClipboard: Cannot transfer data, no data available
      agent:2021/08/20 08:18:19 build.go:391: 179: QWARN  : tst_qquicktextinput::copyAndPasteKeySequence() QXcbClipboard: Cannot transfer data, no data available
      agent:2021/08/20 08:18:19 build.go:391: 179: PASS   : tst_qquicktextinput::copyAndPasteKeySequence()
      agent:2021/08/20 08:18:19 build.go:391: 179: FAIL!  : tst_qquicktextinput::canPasteEmpty() Compared values are not the same
      agent:2021/08/20 08:18:19 build.go:391: 179:    Actual   (textInput->canPaste()): 1
      agent:2021/08/20 08:18:19 build.go:391: 179:    Expected (cp)                   : 0
      agent:2021/08/20 08:18:19 build.go:391: 179:    Loc: [/home/qt/work/qt/qtdeclarative/tests/auto/quick/qquicktextinput/tst_qquicktextinput.cpp(2764)]
      agent:2021/08/20 08:18:19 build.go:391: 179: QWARN  : tst_qquicktextinput::canPaste() QXcbClipboard::setMimeData: Cannot set X11 selection owner
      agent:2021/08/20 08:18:19 build.go:391: 179: FAIL!  : tst_qquicktextinput::canPaste() Compared values are not the same
      agent:2021/08/20 08:18:19 build.go:391: 179:    Actual   (textInput->canPaste()): 1
      agent:2021/08/20 08:18:19 build.go:391: 179:    Expected (cp)                   : 0
      agent:2021/08/20 08:18:19 build.go:391: 179:    Loc: [/home/qt/work/qt/qtdeclarative/tests/auto/quick/qquicktextinput/tst_qquicktextinput.cpp(2780)]
      agent:2021/08/20 08:18:19 build.go:391: 179: PASS   : tst_qquicktextinput::middleClickPaste()
      agent:2021/08/20 08:18:19 build.go:391: 179: PASS   : tst_qquicktextinput::readOnly()
      agent:2021/08/20 08:18:20 build.go:391: 179: PASS   : tst_qquicktextinput::focusOnPress()
      agent:2021/08/20 08:18:20 build.go:391: 179: PASS   : tst_qquicktextinput::focusOnPressOnlyOneItem()
      agent:2021/08/20 08:18:20 build.go:391: 179: PASS   : tst_qquicktextinput::openInputPanel()
      agent:2021/08/20 08:18:21 build.go:391: 179: PASS   : tst_qquicktextinput::setHAlignClearCache()
      

      See also https://testresults.qt.io/grafana/d/5GKDJSPZz/02-qt-framework-please-fix-these-flaky-tests-random-fails?orgId=1&var-project=qt%2Fqtdeclarative&var-testcase=tst_qquicktextinput&var-testfunction=All&var-branch=6.2&var-branch=dev&var-inter=24h&from=now-6M&to=now

        For Gerrit Dashboard: QTBUG-95940
        # Subject Branch Project Status CR V

            axelspoerl Axel Spoerl
            ulherman Ulf Hermann
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: